tests/check_output/snapshots/errors__check_output__main@component_type_mismatch_generics.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error[E0053]: method `logger` has an incompatible type for trait
  --> examples/component_type_mismatch_generics.rs:31:1
   |
31 | / #[component(
32 | |     [
33 | |         logger: singleton_bind(CoffeeLogger<String>),
34 | |         heater: scoped_bind(ElectricHeater) [logger],
...  |
37 | |     ]
38 | | )]
   | |__^ expected `&str`, found `String`
   |
note: type in trait
  --> examples/component_type_mismatch_generics.rs:41:25
   |
41 |     fn logger(&self) -> Arc<RwLock<CoffeeLogger<&str>>>;
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn(&DirkCoffeeShopImpl) -> Arc<RwLock<CoffeeLogger<&str>>>`
              found signature `fn(&DirkCoffeeShopImpl) -> Arc<RwLock<CoffeeLogger<String>>>`
   = note: this error originates in the attribute macro `dirk_macros::__component` (in Nightly builds, run with -Z macro-backtrace for more info)
help: change the output type to match the trait
   |
31 | Arc<RwLock<CoffeeLogger<&str>>>
   |

For more information about this error, try `rustc --explain E0053`.
error: could not compile `coffee` (example "component_type_mismatch_generics") due to 1 previous error
